[gd_scene load_steps=3 format=2]

[ext_resource path="res://EnemySpawner.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 384, 8, 0, 0, 0, 0, 384, 168 )
}

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="RightSpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="RightSpawnPath"]
position = Vector2( 384, 8 )
rotation = 1.5708

[node name="RightSpawn" type="Position2D" parent="RightSpawnPath/PathFollow2D"]

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
